[package]
name = "bevy-persistent-windows"
description = "A Bevy plugin to easily create and manage windows that remember where they were."
categories = ["game-development"]
keywords = ["gamedev", "bevy", "persistent", "window"]
repository = "https://github.com/umut-sahin/bevy-persistent-windows/"
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Umut Şahin <umutsahin@protonmail.com>",
]

[dependencies]
bevy = { version = "0.15", default-features = false, features = ["bevy_window", "bevy_winit", "serialize"] }
bevy-persistent = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
winit = { version = "0.30", default-features = false }

[dev-dependencies]
dirs = { version = "5.0" }
bevy = { version = "0.15" }
bevy-persistent = { version = "0.7", features = ["toml"] }

[features]
default = ["x11"]
library = ["bevy-persistent/library"]
x11 = ["bevy/x11"]

[package.metadata.docs.rs]
features = ["library"]
